[package]
name = "echo-hyper"
version = "0.2.3"
authors = ["Amjad Jibon <amjad.jibon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = "0.4"
env_logger = "0.9.0"
hyper-tls = "0.4"
